@@ -1,3 +1,9 @@
+2023-12-15T20:06:57Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/7226556224 # 4354
+* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--totalcmd-stats/commits?branch=master&time_zone=utc&until=2023-12-15
+* notice: query file size: 26207
+* notice: accum prev / next / diff: re vi: 0 2920 / 0 2921 / +0 +1
+
 2023-12-15T16:08:04Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/7224356735 # 4353
 * notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--totalcmd-stats/commits?branch=master&time_zone=utc&until=2023-12-15
